# docs/swagger.json
@@ -26,9 +26,7 @@
   "paths": {
     "/contacts": {
       "get": {
-        "tags": [
-          "Contacts"
-        ],
+        "tags": ["Contacts"],
         "summary": "Отримати всі контакти",
         "operationId": "getAllContacts",
         "parameters": [
@@ -61,10 +59,7 @@
             "in": "query",
             "schema": {
               "type": "string",
-              "enum": [
-                "asc",
-                "desc"
-              ],
+              "enum": ["asc", "desc"],
               "example": "asc"
             }
           }
@@ -96,6 +91,9 @@
               }
             }
           },
+          "404": {
+            "$ref": "#/components/responses/NotFound"
+          },
           "400": {
             "$ref": "#/components/responses/BadRequest"
           },
@@ -108,9 +106,7 @@
         }
       },
       "post": {
-        "tags": [
-          "Contacts"
-        ],
+        "tags": ["Contacts"],
         "summary": "Створити новий контакт",
         "operationId": "createContact",
         "requestBody": {
@@ -119,12 +115,7 @@
             "application/json": {
               "schema": {
                 "type": "object",
-                "required": [
-                  "name",
-                  "phoneNumber",
-                  "email",
-                  "contactType"
-                ],
+                "required": ["name", "phoneNumber"],
                 "properties": {
                   "name": {
                     "type": "string",
@@ -143,11 +134,7 @@
                   },
                   "contactType": {
                     "type": "string",
-                    "enum": [
-                      "work",
-                      "personal",
-                      "home"
-                    ],
+                    "enum": ["work", "personal", "home"],
                     "example": "work"
                   }
                 }
@@ -177,9 +164,7 @@
     },
     "/contacts/{id}": {
       "get": {
-        "tags": [
-          "Contacts"
-        ],
+        "tags": ["Contacts"],
         "summary": "Отримати контакт за ID",
         "operationId": "getContactById",
         "parameters": [
@@ -213,9 +198,7 @@
         }
       },
       "patch": {
-        "tags": [
-          "Contacts"
-        ],
+        "tags": ["Contacts"],
         "summary": "Оновити контакт",
         "operationId": "updateContact",
         "parameters": [
@@ -250,11 +233,7 @@
                   },
                   "contactType": {
                     "type": "string",
-                    "enum": [
-                      "work",
-                      "personal",
-                      "home"
-                    ]
+                    "enum": ["work", "personal", "home"]
                   }
                 }
               }
@@ -281,9 +260,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Contacts"
-        ],
+        "tags": ["Contacts"],
         "summary": "Видалити контакт",
         "operationId": "deleteContact",
         "parameters": [
@@ -336,11 +313,11 @@
           },
           "contactType": {
             "type": "string",
-            "enum": [
-              "work",
-              "personal",
-              "home"
-            ]
+            "enum": ["work", "personal", "home"]
+          },
+          "userId": {
+            "type": "string",
+            "example": "67bfa7a9925aebdb493b5b33"
           }
         }
       },
